forest-bot-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: forest-bot-pod
  namespace: forest-development
  labels:
    name: forest-bot-pod
    app: forest-bot
spec:

  imagePullSecrets:
    - name: faeries-docker-credentials

  volumes:
    - name: signal-cli-data
      persistentVolumeClaim:
        claimName: forest-bot-data-pvc

  containers:
  - name: forest-bot-container
    image: mobilefaeries/forest-bot:latest
    imagePullPolicy: Always
    resources:
      limits:
        memory: "512Mi"
        cpu: "1"
    ports:
      - containerPort: 8080
        protocol: TCP

    volumeMounts:
      - name: signal-cli-data
        mountPath: /tmp/local-signal
