forest-bot-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forest-bot-service
  namespace: forest-development
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: forest-bot
